@@ -715,8 +715,7 @@ class CommonTest(unittest.TestCase):
         EQ("bobobXbobob", "bobobobXbobobob", "replace", "bobob", "bob")
         EQ("BOBOBOB", "BOBOBOB", "replace", "bob", "bobby")
 
-        # Silence Py3k warning
-        with test_support.check_warnings():
+        with test_support.check_py3k_warnings():
             ba = buffer('a')
             bb = buffer('b')
         EQ("bbc", "abc", "replace", ba, bb)
